- Adds Non-Stadard UEFI 2.x Implementation Resilience
  * Some UEFI 2.x implementations may be incomplete with some functionality missing
  * This is typically due to customisation of the firmware as on Late Intel Macs such as the MacMini8,1
  * This affected running the DEBUG build on such units
  * RefindPlus now accommodates this situation.
- Fixes Implicit Casting of Some Config Integers
  * Some config tokens that could take negative values such as "screensaver" were handled as Unsigned Integers
  * These are now correctly handled as Signed Integers
- Fixes Text Mode Selected Menu Item Display
  * The selected item in text mode menus was not displayed
  * The selections had to be toggled to display the item
  * RefindPlus now works around this issue by automatically toggling such menu items
- Fixes Driver Loading from User Defined Folders
  * Drivers in folders defined by the 'scan_driver_dirs' configuration token were not loaded in some instances
  * This was because the routine expected the defined paths to not include the installation folder path
  * This expectation was not specified however, meaning some users included the path in 'scan_driver_dirs'
  * This expectation has now been removed and the installation folder path may or may not be included
- Fixes Switching External Screens to Text Mode
  * External screens switched to text mode were functional but elements, such as the header, were missing
  * This has now been fixed along with properly disabling the cursor
- Fixes Hang on Runtime Pauses
  * RefindPlus hung on runtime pauses initiated before the main menu was loaded
  * This was due to an absence of the Event Waitlist in such situations
  * The Waitlist is now always generated on runtime pauses if not present
- Fixes Static 'PreviousBoot' Setup
  * The actually booted loader was not recorded if an tool had been run beforehand
  * Such previously set tool could only be changed by manually deleting the NVRAM entry