@@ -7,6 +7,8 @@
   * This is typically due to customisation of the firmware as on Late Intel Macs such as the MacMini8,1
   * This affected running the DEBUG build on such units
   * RefindPlus now accommodates this situation.
+- Adds Forced Shutdown on Secure Boot Setup Failure
+  * RefindPlus will now shutdown if meant to use secure boot but this could not be set up
 - Fixes Implicit Casting of Some Config Integers
   * Some config tokens that could take negative values such as "screensaver" were handled as Unsigned Integers
   * These are now correctly handled as Signed Integers
